Tue Apr 12 07:26:12 UTC 2005  Martin Corino  <mcorino@remedy.nl>

        * bin/PerlACE/ProcessVX.pm:
          Fixed problem for non-Win based builds.
          
Tue Apr 12 08:06:34 2005  Olli Savia  <ops@iki.fi>

        * ace/config-lynxos.h:
          Fixed wrong comment.

        * include/makeinclude/platform_lynxos.GNU:
          VERSION now defaults to 4.0.0
        
Tue Apr 12 07:48:05 2005  Olli Savia  <ops@iki.fi>

        * ace/config-linux-common.h:
        * ace/config-osf1-4.0.h:
        * configure.ac:
        * m4/config_h.m4:

          Removed references to ACE_POLL_IS_BROKEN. It is no longer
          used in ACE/TAO code.

Mon Apr 11 21:55:57 2005  Arvind S. Krishna  <arvindk@dre.vanderbilt.edu>

        * tests/Memcpy_Test.cpp:

          Scoped gettimeofday invocation as ACE_OS::gettimeofday as it was
          causing errors in the ACE build

Mon Apr 11 12:17:01 2005  Ossama Othman  <ossama@dre.vanderbilt.edu>

        * ace/config-lite.h:

          Make sure DSO/DLL symbol related export macros other than
          ACE_Proper_Export_Flag are defined if not previously defined in
          the ACE_HAS_CUSTOM_EXPORT_MACROS case.  Simplifies configuration
          for compilers that only need ACE_Proper_Export_Flag.

        * m4/compiler.m4 (ACE_SET_COMPILER_FLAGS):
        * m4/config_h.m4 (ACE_PREP_CONFIG_HEADER):

          Enable g++ visibility attribute support when using g++ 4.0 or
          better.

Mon Apr 11 11:50:46 2005  J.T. Conklin  <jtc@acorntoolworks.com>

        * ace/README:
        * ace/config-hpux-10.x.h:
        * ace/config-hpux-11.00.h:
        * ace/config-openvms.h:
        * ace/config-osf1-3.2.h:

          Fix typo: POSIX 1.b -> POSIX.1b.

Mon Apr 11 11:39:11 2005  J.T. Conklin  <jtc@acorntoolworks.com>

        * ace/OS_NS_time.h:
        * ace/OS_NS_time.inl:

          Add ACE_OS::clock_settime().

        * ace/config-chorus.h:
        * ace/config-cygwin32.h:
        * ace/config-hpux-10.x.h: